adding delete session id endpoint
